--- a/EN_index.html
+++ b/EN_index.html
@@ -1,3 +1,5 @@
+<img id="AA" style="pointer-events: none; position: fixed; margin-top: -25%; margin-left: -25%; display: none" src="blur.png" width="1000%" height="1000%">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
