--- a/NL_index.html
+++ b/NL_index.html
@@ -1,4 +1,4 @@
-<img id="AA" style="pointer-events: none; position: fixed; margin-top: -25%; margin-left: -25%" src="blur.png" width="1000%" height="1000%">
+<img id="AA" style="pointer-events: none; position: fixed; margin-top: -25%; margin-left: -25%; display: none" src="blur.png" width="1000%" height="1000%">
 
 <!DOCTYPE html>
 <html lang="en">
@@ -154,8 +154,7 @@
 
 <!-- PROJECT VIEW IFRAME -->
 <iframe 
-        id="preview" src="" style="pointer-events: none; border:none; position:fixed; left:2.5%; right:2.5%; bottom: 5%;
-        box-shadow: 0px 0px 5px 5px #96a275"
+        id="preview" src="" style="pointer-events: none; border:none; position:fixed; left:2.5%; right:2.5%; bottom: 5%;"
         height="800" width=95%>
 </iframe>
 <!-- Hides the project preview when you click outside of it -->
