--- a/EN_index.html
+++ b/EN_index.html
@@ -28,7 +28,7 @@
         I'm a 3rd year student at the Mediacollege Amsterdam, following the <heheh style="font-size: 18px;">Software Development</heheh> course.<br>
         <br>
         I'm looking for an internship at a company where I can focus on working towards technical aspects of games with in not-too-large team.<br>
-        There I'd like to have the freedom- or a say- in what I get to work on, based on what I'm best at.<br>
+        There I'd like to have the possibility to continuously grow and learn new things.<br>
         <br>
         My interest lies mainly in game-dev, but I do video editing and pixel-art too, even some music.<br>
         I just like creating things.<br><br>
