--- a/NL_index.html
+++ b/NL_index.html
@@ -35,7 +35,7 @@
         Ik ben 3e-jaars student van Mediacollege Amsterdam en volg de opleiding <heheh style="font-size: 18px;">Software Development</heheh>.<br>
         <br>
         Ik ben op zoek naar een stageplek waar ik met een niet te grote team gericht aan technische aspecten van spellen kan werken.<br>
-        Daar wil ik de vrijheid hebben om te kiezen, of een stem te hebben in- waar ik aan werk, gebaseerd op waar ik het best in ben.<br>
+        Daar wil ik de mogelijkheid hebben om continu door te groeien en nieuwe dingen te leren.<br>
         <br>
         Mijn interesse ligt voornamelijk bij game-dev, maar ik doe ook aan video editing en pixel-art too, en zelfs wat digitale muziek.<br>
         Ik vind het gewoon leuk om dingen te creëren.<br>
