added more stuff

--- a/EN_index.html
+++ b/EN_index.html
@@ -133,6 +133,13 @@
     </div>
 </div>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<a href="unsorted.html">Some unsorted stuff</a>
+
 <!-- CONTACT -->
 <br><br><br><br><br><br>
 <footer>
