--- a/NL_index.html
+++ b/NL_index.html
@@ -142,6 +142,14 @@
     </div>
 </div>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<a href="unsorted.html">Wat ge onsorteerde dingen</a>
+
+
 <!-- CONTACT -->
 <br><br><br><br><br><br>
 <footer>
