Added maze generator project

--- a/EN_index.html
+++ b/EN_index.html
@@ -11,7 +11,7 @@
 </head>
 <body style="background-image: url('test.jpg')">
 
-<img src="EN_Flag.png" onclick="location.href='NL_index.html'" style="position: absolute; margin-top: -13px" width="64px" height="48px">
+<!--<img src="EN_Flag.png" onclick="location.href='NL_index.html'" style="position: absolute; margin-top: -13px" width="64px" height="48px">-->
 
 <h1 style="text-align: center"><spry>Teo</spry></h1>
 <h1 style="text-align: center"><gwigjw style="font-weight: lighter"><spry>Game Developer Unity</spry></gwigjw></h1>
@@ -27,7 +27,7 @@
         Hello, my name is <heheh style="font-size: 18px">Teo</heheh>, from The Netherlands<br>
         I'm a 3rd year student at the Mediacollege Amsterdam, following the <heheh style="font-size: 18px;">Software Development</heheh> course.<br>
         <br>
-        I'm looking for an internship at a company where I can focus on working towards technical aspects of games with in not-too-large team.<br>
+        I'm looking for an internship at a company where I can focus on working towards technical aspects of games in a not-too-large team.<br>
         There I'd like to have the possibility to continuously grow and learn new things.<br>
         <br>
         My interest lies mainly in game-dev, but I do video editing and pixel-art too, even some music.<br>
@@ -129,6 +129,21 @@
             <button onclick="window.open('https://github.com/TeoPara/TouhouGame', '_blank')">Github Repo</button>
             <img src="csTag.png" title="C#">
             <img src="opentkTag.png" title="OpenTK">
+        </footer>
+    </div>
+
+    <!-- Maze Generator -->
+    <div>
+        <header>
+            <h3>Maze Generator</h3>
+            <img width="100%" src="content/Maze.png">
+            <p style="margin-top: -5px"></p>
+        </header>
+        <footer>
+            <button class="ignoreOutClick" onclick="setSrc('EN_Maze.html')">Read more...</button>
+            <button onclick="window.open('https://github.com/TeoPara/MazeGen', '_blank')">Github Repo</button>
+            <img src="csTag.png" title="C#">
+            <img src="unityTag.png" title="Unity">
         </footer>
     </div>
 </div>
