--- a/EN_index.html
+++ b/EN_index.html
@@ -101,7 +101,6 @@
             <img src="unityTag.png" title="Unity">
         </footer>
     </div>
-
     
     <!-- Starfall Character Customisation Website -->
     <div>
@@ -144,6 +143,20 @@
             <button onclick="window.open('https://github.com/TeoPara/MazeGen', '_blank')">Github Repo</button>
             <img src="csTag.png" title="C#">
             <img src="unityTag.png" title="Unity">
+        </footer>
+    </div>
+
+    <!-- Online Forum -->
+    <div>
+        <header>
+            <h3>Imageboard</h3>
+            <img width="100%" src="content/AibThumbnail.png">
+            <p>Online forum. Users can post images & text. & it's saved.<br><br>Made using <img style="height: 22px" src="content/120px-Node.js_logo.svg.png"> and <code>Socket.io</code></p>
+        </header>
+        <footer>
+            <button class="ignoreOutClick" onclick="setSrc('EN_AIB.html')">Read more...</button>
+            <button style="visibility: hidden" onclick="window.open('', '_blank')">Github Repo</button>
+            <img src="jsTag.png" title="Javascript">
         </footer>
     </div>
 </div>
