--- a/EN_index.html
+++ b/EN_index.html
@@ -35,7 +35,7 @@
         And I'm mainly interested in creating large multiplayer games, but I also just do whatever small projects that seem fun.<br>They don't even have to be games, just various tools and things like that.
         <br>
         <br>
-        Even before I started my education, was I a hobbyist game-dev exploring the realm of possibilities.<br>
+        I was a hobbyist game-dev exploring the realm of possibilities, even before I started my education.<br>
         Here's how I got into programming:<br>
         <button id="showmorebtn" onclick="document.getElementById('showmore').style.display = ''; document.getElementById('showmorebtn').style.display = 'none';">show more..</button>
     </p>
@@ -166,7 +166,9 @@
 <br>
 <br>
 <br>
+<!--
 <a href="unsorted.html">Some unsorted stuff</a>
+-->
 
 <!-- CONTACT -->
 <br><br><br><br><br><br>
