--- a/EN_index.html
+++ b/EN_index.html
@@ -25,7 +25,7 @@
     <h3>Introduction</h3>
     <p>
         Hello, my name is <heheh style="font-size: 18px">Teo</heheh>, from The Netherlands<br>
-        I'm a 3rd year student at the Mediacollege Amsterdam, following the <heheh style="font-size: 18px;">Software Development</heheh> course.<br>
+        I'm a third year student at the Mediacollege Amsterdam, following the <heheh style="font-size: 18px;">Software Development</heheh> course.<br>
         <br>
         I'm looking for an internship at a company where I can focus on working towards technical aspects of games in a not-too-large team.<br>
         There I'd like to have the possibility to continuously grow and learn new things.<br>
@@ -41,18 +41,18 @@
     </p>
     <div id="showmore" style="display: none">
         <hr>
-        <h3>Preliminary interest<comm style="font-weight: lighter"> //- games that introduced me to the concept of programming</comm></h3>
+        <h3>Preliminary interest<comm style="font-weight: lighter"> // — games that introduced me to the concept of programming</comm></h3>
         <p>
             The first game I've ever played must've been <sblue>Little Big Planet</sblue>... on the PS3, when I was around 4 years old.<br>
             I'm sure that if that game weren't a SANDBOX game, that I would be less likely to be where I am today.<br>
-            That platformer game is a bastion of creativity, it allows you to create a lot crazy shit! It has a <sred>"circuit" system</sred>- you can add various
+            That platformer game is a bastion of creativity, it allows you to create a lot of cool stuff! It has a <sred>"circuit" system</sred>- You can add various
             components like logical gates or math operators or sensors onto things, and then wire things together to create mechanics in your levels. This is the most important
-            part of the sandbox experience. And you could <i>technically</i> call it programming, in the more broader definition of the word. It's <sred>like visual scripting</sred>.<br>
+            part of the sandbox experience. And you could <i>technically</i> call it programming, in the broader definition of the word. It's <sred>like visual scripting</sred>.<br>
             <br>
             The next important game that I came across is called <sblue>Manyland</sblue>. It's a 2D tile-based sandbox roleplay browser game where everything consists of pixel-art drawn by the players.
             You can create a world and fill it with either other people's things or stuff you've created yourself. But the important part is that the game also has <sred>it's own programming language</sred> that allows you
-            to create interactive objects, game mechanics, systems. So you can create a world where you've got a ping-pong game, or a working chess board, etc, and have other players play it with you.<br>
-            I have spent a LOT of time in this game, just coding stuff with it's custom language. But I've also spent a good amount of time doing pixel-art! <comm>//(which quite paid off down the line)</comm>
+            to create interactive objects, game mechanics, systems. So you can create a world where you've got a ping-pong game, or a working chess board, etc., and have other players play it with you.<br>
+            I have spent a LOT of time in this game, just coding stuff with its custom language. But I've also spent a good amount of time doing pixel-art! <comm>//(which quite paid off down the line)</comm>
         </p>
         <hr>
         <h3>My first <i>real</i> programming experience</h3>
