--- a/EN_index.html
+++ b/EN_index.html
@@ -120,8 +120,8 @@
     <div>
         <header>
             <h3>Touhou Game</h3>
-            <img width="100%" src="content/touhou1.png">
-            <p style="margin-top: -5px">A bullet hell game. Created w/ OpenTK library, no engine.</p>
+            <img width="100%" src="content/TouhouGif.gif">
+            <p style="margin-top: -0px">A bullet hell game. Created w/ OpenTK library, no engine.</p>
         </header>
         <footer>
             <button class="ignoreOutClick" onclick="setSrc('EN_Touhou.html')">Read more...</button>
@@ -135,8 +135,8 @@
     <div>
         <header>
             <h3>Maze Generator</h3>
-            <img width="100%" src="content/Maze.png">
-            <p style="margin-top: -5px"></p>
+            <img width="100%" src="content/MazeGen.gif">
+            <p style="margin-top: 5px">Rectangular & hexagonal mazes</p>
         </header>
         <footer>
             <button class="ignoreOutClick" onclick="setSrc('EN_Maze.html')">Read more...</button>
