made teamaj. a gif

--- a/EN_index.html
+++ b/EN_index.html
@@ -91,7 +91,7 @@
     <div>
         <header>
             <h3>TeaMajesty</h3>
-            <img width="100%" src="content/TeaMajestyThumbnail.png">
+            <img width="100%" src="content/TeaGif.gif">
             <p>A simple puzzle game</p>
         </header>
         <footer>
