--- a/EN_index.html
+++ b/EN_index.html
@@ -176,7 +176,7 @@
     <h1 style="text-align: center">Contact Me</h1>
     <ul style="color: white">
         <li><p>E-Mail: t.paraszkiewicz@gmail.com</p></li>
-        <li><p>Discord: dierolz</p></li>
+        <li><p>Linkedin: linkedin.com/in/teopara</p></li>
     </ul>
 </footer>
 
